# data_viewer

./: .npmrc  .prettierignore  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: build.yaml
docs/design/: overview.md
scripts/: sync-cargo-version.mjs
src/: App.css  App.tsx  EmptyData.tsx  ErrorModal.tsx  FileInput.tsx  FileUpload.tsx  GlimpseView.tsx  RecordView.tsx  SQLEditor.tsx  SummaryDisplay.tsx  Table.tsx  TypeIcon.tsx  TypographyTruncate.tsx  advancedFilter.ts  csv.ts  csvExport.ts  databaseFile.ts  handler.ts  monacoLanguageConfig.ts  types.ts  useCellRangeSelection.ts  useDragDrop.ts  useErrorMessage.ts  useMode.ts  utils.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data_frame/: Cargo.toml
src-tauri/data_frame/src/: lib.rs
src-tauri/db/: Cargo.toml
src-tauri/db/src/: duckdb_data_type.rs  duckdb_type.pest  lib.rs
src-tauri/db/tests/fixtures/: sample.csv  temporal_sample.csv
src-tauri/src/: lib.rs  main.rs  modules.rs
src-tauri/src/modules/: handler.rs  new_data_frame.rs
src-tauri/src/modules/handler/: sqruff.rs
src/charts/: ChartTooltip.tsx  HistogramChart.tsx  HorizontalBarChart.tsx  ValueCountsChart.tsx  histogram.tsx  useChartTooltip.ts
src/components/: AdvancedFilterPanel.tsx  ColumnVisibilityMenu.tsx  DebouncedInput.tsx  ExportActions.tsx  app-sidebar.tsx  theme-provider.tsx
src/components/ui/: alert-dialog.tsx  button-variants.ts  button.tsx  popover.tsx  sidebar.tsx
src/hooks/: use-mobile.ts
(+1 files in other folders)
