[package]
name = "data_frame"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
polars = { version = "0.48.1", features = [
  "polars-io",
  "serde",
  "json",
  "lazy",
  "parquet",
  "timezones",
  "dtype-full",
] }
polars-sql = "0.48.1"
chrono-tz = { version = "0.10.3", features = ["serde"] }
